@@ -13,7 +13,7 @@ Description: Calculation routines based on the FOCUS Kinetics Report (2006).
   (default is a Levenberg-Marquardt variant).  Please note that no warranty is
   implied for correctness of results or fitness for a particular purpose.
 Depends: FME, deSolve, minpack.lm
-Suggests: RUnit, gWidgetsWWW2, canvas
+Suggests: RUnit, gWidgetsWWW2, RSVGTipsDevice
 License: GPL
 LazyLoad: yes
 LazyData: yes
